--- a/.github/workflows/client-compatibility.yml
+++ b/.github/workflows/client-compatibility.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   install:
-    # if: github.event.pull_request.user.login == 'siyaoishiding'
+    if: github.actor == "SiyaoIsHiding"
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -39,6 +39,5 @@ jobs:
       run: |
         cd $GITHUB_WORKSPACE/client 
         sed -i "s|<driver.version>.*<\/driver.version>|<driver.version>${{ matrix.driver_version }}<\/driver.version>|" pom.xml
-        cat pom.xml
-        mvn compile exec:java -Dexec.mainClass="org.example.Main" -DastraToken=${{ secrets.astraToken }} -DdbId=${{ secrets.dbId }}
+        mvn compile exec:java -Dexec.mainClass="org.example.Main" -DastraToken=${{ secrets.ASTRATOKEN }} -DdbId=${{ secrets.DBID }}
         
